# TP_Project

./: README.md
TP_Project/: CMakeLists.txt  README.md  interactor.cpp
TP_Project/My_Bot/: bot.h
TP_Project/Objects/: Field.h  Field_builder.h  Ships.h  bot.h
TP_Project/src/: CMakeLists.txt  Field.cpp  Field_builder.cpp  Ships.cpp  bot.cpp
